# Vulkan-Headers

./: .gitignore  BUILD.bazel  BUILD.gn  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  INTEGRATION.md  Makefile  Makefile.release  README.md  REUSE.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  linux.yml
.reuse/: dep5
cmake/: Config.cmake.in  VulkanHeadersConfig.cmake.in  install.cmake  version.cmake
debian/: changelog  control  copyright  rules  vulkan-headers.install  watch
debian/patches/: install-vulkan-intel-header.diff  series
include/vk_video/: vulkan_video_codec_h264std.h  vulkan_video_codec_h264std_decode.h  vulkan_video_codec_h264std_encode.h  vulkan_video_codec_h265std.h  vulkan_video_codec_h265std_decode.h  vulkan_video_codec_h265std_encode.h  vulkan_video_codecs_common.h
include/vulkan/: vk_icd.h  vk_layer.h  vk_sdk_platform.h  vulkan.cppm  vulkan.hpp  vulkan_android.h  vulkan_beta.h  vulkan_core.h  vulkan_directfb.h  vulkan_enums.hpp  vulkan_extension_inspection.hpp  vulkan_format_traits.hpp  vulkan_fuchsia.h  vulkan_funcs.hpp  vulkan_ggp.h  vulkan_handles.hpp  vulkan_hash.hpp  vulkan_hpp_macros.hpp  vulkan_ios.h  vulkan_macos.h  vulkan_metal.h  vulkan_ohos.h  vulkan_raii.hpp  vulkan_sc.h  vulkan_sc_core.h  vulkan_sc_core.hpp  vulkan_sci.h  vulkan_screen.h  vulkan_shared.hpp  vulkan_static_assertions.hpp  vulkan_structs.hpp  vulkan_to_string.hpp  vulkan_vi.h  vulkan_wayland.h  vulkan_win32.h  vulkan_xcb.h  vulkan_xlib.h  vulkan_xlib_xrandr.h
json/: vk.json  vulkan_json_data.hpp  vulkan_json_gen.c  vulkan_json_gen.h  vulkan_json_parser.hpp
registry/: base_generator.py  cgenerator.py  generator.py  genvk.py  reg.py  validusage.json  vk.xml  vkconventions.py
registry/profiles/: VP_KHR_roadmap.json
registry/spec_tools/: util.py
tests/: CMakeLists.txt  vk_hpp.cpp  vk_hpp_module.cpp  vk_icd.c  vk_layer.c  vk_sdk_platform.c
tests/add_subdirectory/: CMakeLists.txt
tests/find_package/: CMakeLists.txt
tests/integration/: CMakeLists.txt
